--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Angela's Personal site</title>
+    <title>Debasis's Personal site</title>
   </head>
   <body>
   <table cellspacing=20>
     <tr>
-      <td><h1>Angela Yu</h1></td>
-      <td><p><em>Founder and CTO of the <strong><a href="https://appbrewery.com/">The App Brawery</a></strong></em></p>
+      <td><h1>Debasis Dalai</h1></td>
+      <td><p><em>Web app Developer <strong><a href="https://appbrewery.com/">The App Brawery</a></strong></em></p>
           <p>i am an ios and web Developer. I love coffee and brew my own beers.</p></td>
     </tr>
   </table>
